<resources>
    <string name="app_name">Android-training</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonLibro">Libro</string>
    <string name="buttonLista">LISTA</string>
    <string name="validateDni">DNI debe ser de 8 digitos</string>
    <string name="validateDigits">El número debe ser de 9 digitos</string>
    <string name="validateCredentials">Ingrese correctamente sus credenciales</string>
    <string name="nameBook">Nombre de Libro</string>
    <string name="detailBook">Fecha publicacion, numero de paginas</string>
    <string name="buttonBuy">COMPRAR LIBRO</string>
    <string name="introductionBook">Introducción del libro mostrado</string>
    <string name="buttonExpand">Expandir</string>
    <string name="qualifyBook">Califica el Libro</string>
    <string name="reviewPublic">Las reseñas son pública y pueden editarse. El programador puede ver las ediciones anteriores, a menos que borres toda la reseña</string>
    <string name="tag1">15,993</string>
    <string name="tag2">92%</string>
    <string name="tag3">Similares</string>
    <string name="tag4">Drama</string>
    <string name="labelSoles">S/.</string>
    <string name="textDate">21/02/2018</string>
    <string name="numberPages">180</string>
    <string name="labelDate">Fecha de publicación:\n %s</string>
    <string name="labelPage">%d Páginas</string>
    <string name="dataAuthor">Datos de Autor</string>
    <string name="labelFistName">Nombre: %s</string>
    <string name="labelLastName">Apellido: %s</string>
    <string name="language">Idioma</string>
    <string name="editor">Editor</string>
    <string name="isbn">ISBN: </string>
    <string name="btnSelector01">Leer ahora</string>
    <string name="btnSelector02">Leer Después</string>
    <string name="back">Back</string>
    <string name="btnComment">Deja tu Comentario</string>
    <string name="CommentaryOk">Salir</string>
    <string name="Titlecommentary">Déjanos tu Comentario</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Número de Pantalla: %1$d</string>
    <string name="skip">Saltar</string>
    <string name="iBtnEnter">Entrar</string>
    <string name="descPag01">Bienvenido \n disfruta de los libros</string>
    <string name="descPag02">Ahora puedes obtener libros desde cualquier lugar</string>
    <string name="descPag03">Selecciona \"ENTRAR\" para difrutar de los libros</string>
</resources>
